--- a/Algorithms_And_DataStructures/Algorithms_And_DataStructures/Algorithms_And_DataStructures.csproj
+++ b/Algorithms_And_DataStructures/Algorithms_And_DataStructures/Algorithms_And_DataStructures.csproj
@@ -44,8 +44,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Algorithms.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SinglyLinkedList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
