--- a/Algorithms_And_DataStructures/Algorithms_And_DataStructures/Algorithms_And_DataStructures.csproj
+++ b/Algorithms_And_DataStructures/Algorithms_And_DataStructures/Algorithms_And_DataStructures.csproj
@@ -48,10 +48,13 @@
     <Compile Include="Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queue.cs" />
     <Compile Include="SinglyLinkedList.cs" />
+    <Compile Include="Stack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
